# tetroid

./: .editorconfig  README.md  cabal.project  default.nix  devshell.nix  flake.nix  haskell-codeworld-template.cabal  overlay.nix  package.yaml  tetroid.cabal
nix/: default.nix
nix/tetroid/: default.nix
src/: Common.hs  Game.hs  Keyboard.hs  Movement.hs  Playfield.hs  Project.hs  Queue.hs  Render.hs  Tetrominos.hs
