name:                tetroid
version:             0.1.0.0
synopsis:            Tetroid
category:            Web
build-type:          Simple
cabal-version:       2.0

executable tetroid
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    base, miso, todo-common, servant, servant-jsaddle, containers, lens, text, mtl, network-uri
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets, servant-jsaddle,
        http-proxy, http-client
  default-language:
     Haskell2010

